<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_drawable"
    android:orientation="vertical"
    android:layout_margin="12sp"
    >

    <TableRow
        android:gravity="center">
        <TextView
            android:id="@+id/dialog_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dialog_menu_label"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="15sp"/>
    </TableRow>

    <TableRow
        android:gravity="center">
        <Button
            android:background="@drawable/button_background_drawable"
            android:id="@+id/btn_ringtone"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:text="@string/ringtone"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            android:focusable="true"
            tools:ignore="ButtonStyle" />
    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_margin="15sp">
        <Button
            android:background="@drawable/button_background_drawable"
            android:id="@+id/btn_notification_sound"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:text="@string/notification_sound"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            android:focusable="true"
            tools:ignore="ButtonStyle" />

    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_marginBottom="5sp">
        <Button
            android:background="@drawable/button_background_drawable"
            android:id="@+id/btn_share"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:text="@string/share"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            android:focusable="true"
            tools:ignore="ButtonStyle" />
    </TableRow>
</TableLayout>
