<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_drawable"
    android:orientation="vertical"
    android:layout_margin="12sp"
    >

    <TextView
        android:id="@+id/app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TableLayout
        android:layout_margin="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageView
            android:layout_gravity="center"
            android:background="@drawable/tuomomees_app_lab_app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

    </TableLayout>

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_margin="2dp"
        android:text="@string/about_text"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_margin="5sp"
        >

        <Button
            android:background="@drawable/button_background_drawable"
            android:id="@+id/btn_feedback"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:text="@string/feedbackbutton_text"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            android:focusable="true"
            tools:ignore="ButtonStyle" />

        <Button
            android:background="@drawable/button_background_drawable"
            android:id="@+id/btn_close"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:text="@string/closebutton_text"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            android:focusable="true"
            android:layout_marginStart="5dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
